# AudioAndVideoEditor

./: README.md  README_en.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts  google-services.json
app/release/: output-metadata.json
app/src/androidTest/java/com/example/audioandvideoeditor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/audioandvideoeditor/: IFFmpegService.aidl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
app/src/main/cpp/media/decoder/: BaseDecoder.cpp  BaseDecoder.h
app/src/main/cpp/media/decoder/audio/: AudioDecoder.cpp  AudioDecoder.h
app/src/main/cpp/media/decoder/video/: VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/media/encoder/: BaseEncoder.cpp  BaseEncoder.h
app/src/main/cpp/media/encoder/audio/: AudioEncoder.cpp  AudioEncoder.h
app/src/main/cpp/media/encoder/video/: VideoEncoder.cpp  VideoEncoder.h
app/src/main/cpp/media/fifo/: FFAudioFifo.cpp  FFAudioFifo.h
app/src/main/cpp/media/muxer/: Mp4Muxer.cpp  Mp4Muxer.h
app/src/main/cpp/task/: AudioAndVideoInfo.cpp  AudioAndVideoInfo.h  FFmpegCommandsTask.cpp  FFmpegCommandsTask.h  FFmpegInfo.cpp  FFmpegInfo.h  FFmpegServiceTask.cpp  FFmpegServiceTask.h  ReEncodingTask.cpp  ReEncodingTask.h  RePackagingTask.cpp  RePackagingTask.h  TasksFactory.cpp  TasksFactory.h  task.h  task_info.h
app/src/main/cpp/utils/: logger.h  one_frame.h
app/src/main/java/com/example/audioandvideoeditor/: MainActivity.kt
app/src/main/java/com/example/audioandvideoeditor/components/: APPTestScreen.kt  AudioAndVideoInfoScreen.kt  AudioSegmenterScreen.kt  ConfigScreen.kt  ConfigScreen2.kt  ContactDeveloperScreen.kt  Destinations.kt  ExtractAudioScreen.kt  FFmpegCommandsScreen.kt  FFmpegInfoScreen.kt  FileReadingScreen.kt  FileSelectionScreen.kt  FilesListScreen.kt  FilesListScreen2.kt  FunctionsCenterScreen.kt  HomeScreen.kt  LogDisplayScreen.kt  Navigation.kt  PermissionsScreen.kt  ReEncodingScreen.kt  RePackagingScreen.kt  RecordingScreen.kt  SpeedChangeScreen.kt  TasksCenterSrceen.kt  UserCenterScreen.kt  VideoAspectRatioScreen.kt  VideoCompressScreen.kt  VideoCropScreen.kt  VideoFilesListScreen.kt  VideoFormatConversionScreen.kt  VideoMuteScreen.kt  VideoSegmenterScreen.kt  VideosPlayScreen.kt
app/src/main/java/com/example/audioandvideoeditor/dao/: AppDatabase.kt  AudiosPagingSource.kt  ImagesPagingSource.kt  TasksDao.kt  VideosPagingSource.kt
app/src/main/java/com/example/audioandvideoeditor/entity/: AudioInfo.kt  ImageInfo.kt  MediaInfo.kt  Task.kt  TaskInfo.kt  VideoInfo.kt
app/src/main/java/com/example/audioandvideoeditor/lifecycle/: ComposeLifecycleObserver.kt  LifecycleObserver.kt
app/src/main/java/com/example/audioandvideoeditor/services/: FFmpegService.kt  RecordingService.kt  TasksBinder.kt  TasksService.kt
app/src/main/java/com/example/audioandvideoeditor/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/audioandvideoeditor/utils/: ConfigsUtils.kt  FilesUtils.kt  FirebaseUtils.kt  FormatsUtils.kt  LogUtils.kt  PermissionsUtils.kt  TextsUtils.kt
app/src/main/java/com/example/audioandvideoeditor/viewmodel/: AdViewModel.kt  AudioAndVideoInfoViewModel.kt  AudioSegmenterViewModel.kt  ConfigViewModel.kt  ConfigViewModel2.kt  ExtractAudioViewModel.kt  FFmpegCommandsViewModel.kt  FFmpegInfoViewModel.kt  FileReadingViewModel.kt  FilesViewModel.kt  FilesViewModel2.kt  HomeViewModel.kt  ReEncodingViewModel.kt  RePackagingViewModel.kt  RecordingViewModel.kt  SpeedChangeViewModel.kt  TasksCenterViewModel.kt  UserCenterViewModel.kt  VideoAspectRatioViewModel.kt  VideoCompressViewModel.kt  VideoCropViewModel.kt  VideoFilesListViewModel.kt  VideoFormatConversionViewModel.kt  VideoMuteViewModel.kt  VideoSegmenterViewModel.kt  VideosPlayViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  movie_edit_24px.xml  play_circle_24px.xml  refresh_24px.xml  settings_24px.xml  sort_24px.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/audioandvideoeditor/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
